# multiagente

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.claude/: settings.json
.claude/agents/: desenvolvedor.md  pesquisador.md  revisor.md
.full-review/: 00-scope.md  01-quality-architecture.md  02-security-performance.md  03-documentation.md  03-testing-documentation.md  04-best-practices.md  05-final-report.md  state.json
alembic/: env.py
alembic/versions/: 001_criar_tabela_tarefas.py
app/: main.py
app/core/: config.py  database.py
app/models/: tarefa.py
app/routers/: tarefas.py
app/schemas/: tarefa.py
conductor/: index.md  observability.md  performance.md  product-guidelines.md  product.md  secops.md  setup_state.json  tech-stack.md  tracks.md  workflow.md
conductor/code_styleguides/: python.md
conductor/tracks/todo-api_20260209/: index.md  metadata.json  plan.md  spec.md
tests/: conftest.py  test_tarefas.py
